public static class CharAnimConstant
{
    public const string IdleTriggerName = "Idle";
    public const string WalkTriggerName = "Walk";
    public const string DashTriggerName = "Dash";
    public const string JumpTriggerName = "Jump";
    public const string LandingTriggerName = "Landing";
    public const string FreeFallTriggerName = "FreeFall";
    public const string HitTriggerName = "Hit";
    public const string DropHitTriggerName = "DropHit";
    public const string ShootTriggerName = "Shoot";
    public const string SlideTriggerName = "Slide";

    public const string SlidingBoolName = "IsSliding";
}
