public static class EnemyAnimConstant {
    public const string DefaultTriggerName = "Default";
    public const string JumpTriggerName = "Jump";
    public const string LandingTriggerName = "Landing";
    public const string BeatBackTriggerName = "BeatBack";
    public const string FreeFallTriggerName = "FreeFall";
    public const string DieTriggerName = "Die";

    public const string InvincibleBoolName = "IsInvincible";
}
